--- a/Proyecto TP/frontend/index.html
+++ b/Proyecto TP/frontend/index.html
@@ -40,13 +40,13 @@
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                    <img src="../Media/Index/Imagen-1carrusel.jpg" class="d-block w-100" alt="...">
+                    <img src="/Proyecto TP/frontend/Media/Index/Imagen-1carrusel.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                    <img src="../Media/Index/Imagen-2carrusel.jpg" class="d-block w-100" alt="...">
+                    <img src="/Proyecto TP/frontend/Media/Index/Imagen-2carrusel.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                    <img src="../Media/Index/Imagen-3carrusel.jpg" class="d-block w-100" alt="...">
+                    <img src="/Proyecto TP/frontend/Media/Index/Imagen-3carrusel.jpg" class="d-block w-100" alt="...">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -66,10 +66,10 @@
                         <button class="tarjeta-info-btn" onclick="window.location.href='arma_rutina.html'">ORGANIZA TU RUTINA</button>
                     </div>
                     <div class="tarjeta-img" >
-                        <img src="https://images.unsplash.com/photo-1734668487893-d686f3c8d0cf?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjJ8fGVudHJlbmFkb3IlMjBhcm1hbmRvJTIwcnV0aW5hfGVufDB8fDB8fHww" alt="imagen de entrenamiento">
+                        <img src="/Proyecto TP/frontend/Media/img_rutina.jpeg" alt="imagen de entrenamiento">
                     </div>
                     <div class="tarjeta-img" >
-                        <img src="https://us.123rf.com/450wm/rosinka79/rosinka791505/rosinka79150500371/39384250-la-harina-de-avena-en-un-plato-negro-sobre-balanza-digital-que-muestra-de-100-gramos.jpg?ver=6" alt="imagen de comida saludable">
+                        <img src="/Proyecto TP/frontend/Media/img_alimentacion.jpg" alt="imagen de comida saludable">
                     </div>
                     <div class="tarjeta-info" >
                         <p class="tarjeta-info-text">Comé de forma inteligente y alineá tu alimentación con tus objetivos físicos y de salud.
