Cambios en los DELETE y en un link de ejercicio.mjs mal linkeado

--- a/Proyecto TP/frontend/ejercicios.html
+++ b/Proyecto TP/frontend/ejercicios.html
@@ -482,7 +482,8 @@
 
 
     </script>
-    <script src="../js/ejercicios.mjs" type="module" ></script>
+    <script src="js/ejercicios.mjs" type="module" ></script>
+
     </body>
 </html>
 
