cambio de ruta en las imagenes

--- a/Proyecto TP/frontend/quienes_somos.html
+++ b/Proyecto TP/frontend/quienes_somos.html
@@ -32,7 +32,7 @@
         </nav>
         </header>
         <main>
-            <img class="quienes_somos-img" src="/Proyecto TP/frontend/Media/Quienes_Somos/imagen_portada.jpg" alt="Imagen utilizando Atlas+">
+            <img class="quienes_somos-img" src="../frontend/Media/Quienes_Somos/imagen_portada.jpg" alt="Imagen utilizando Atlas+">
             <section class="quienes_somos-seccion">
                 <div class="quienes_somos-infoBox">
                     <h1 class="quienes_somos-h1">Somos Atlas+</h1>
