--- a/Proyecto TP/frontend/index.html
+++ b/Proyecto TP/frontend/index.html
@@ -40,13 +40,13 @@
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                    <img src="/Proyecto TP/frontend/Media/Index/Imagen-1carrusel.jpg" class="d-block w-100" alt="...">
+                    <img src="../frontend/Media/Index/Imagen-1carrusel.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                    <img src="/Proyecto TP/frontend/Media/Index/Imagen-2carrusel.jpg" class="d-block w-100" alt="...">
+                    <img src="../frontend/Media/Index/Imagen-2carrusel.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                    <img src="/Proyecto TP/frontend/Media/Index/Imagen-3carrusel.jpg" class="d-block w-100" alt="...">
+                    <img src="../frontend/Media/Index/Imagen-3carrusel.jpg" class="d-block w-100" alt="...">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -66,10 +66,10 @@
                         <button class="tarjeta-info-btn" onclick="window.location.href='arma_rutina.html'">ORGANIZA TU RUTINA</button>
                     </div>
                     <div class="tarjeta-img" >
-                        <img src="/Proyecto TP/frontend/Media/img_rutina.jpeg" alt="imagen de entrenamiento">
+                        <img src="../frontend/Media/img_rutina.jpeg" alt="imagen de entrenamiento">
                     </div>
                     <div class="tarjeta-img" >
-                        <img src="/Proyecto TP/frontend/Media/img_alimentacion.jpg" alt="imagen de comida saludable">
+                        <img src="../frontend/Media/img_alimentacion.jpg" alt="imagen de comida saludable">
                     </div>
                     <div class="tarjeta-info" >
                         <p class="tarjeta-info-text">Comé de forma inteligente y alineá tu alimentación con tus objetivos físicos y de salud.
