arreglado, problema imagens en index.html

--- a/Proyecto TP/frontend/index.html
+++ b/Proyecto TP/frontend/index.html
@@ -66,10 +66,10 @@
                         <button class="tarjeta-info-btn" onclick="window.location.href='arma_rutina.html'">ORGANIZA TU RUTINA</button>
                     </div>
                     <div class="tarjeta-img" >
-                        <img src="../frontend/Media/img_rutina.jpeg" alt="imagen de entrenamiento">
+                        <img src="Media/img_rutina.jpeg" alt="imagen de entrenamiento">
                     </div>
                     <div class="tarjeta-img" >
-                        <img src="../frontend/Media/img_alimentacion.jpg" alt="imagen de comida saludable">
+                        <img src="Media/img_alimentacion.jpg" alt="imagen de comida saludable">
                     </div>
                     <div class="tarjeta-info" >
                         <p class="tarjeta-info-text">Comé de forma inteligente y alineá tu alimentación con tus objetivos físicos y de salud.
